@@ -1,13 +1,36 @@
+plugins {
+  id 'java'
+}
+
+
 dependencies {
-  compile project(path: ':coral-common')
-  compile (deps.'graph-vis')
-  compile project(path: ':coral-hive')
-  testCompile (deps.'hive'.'hive-exec-core') {
+  implementation project(path: ':coral-common')
+  implementation (deps.'graph-vis')
+  implementation project(path: ':coral-hive')
+  implementation(project(path: ':shading:guava-shaded', configuration: 'shadow'))
+  testImplementation (deps.'hive'.'hive-exec-core') {
     exclude group: 'org.apache.avro', module: 'avro-tools'
     // This exclusion is required to prevent duplicate classes since we include
     // shaded 'calcite-core' transitively
     exclude group: 'org.apache.calcite', module: 'calcite-core'
   }
-  testCompile deps.'hadoop'.'hadoop-mapreduce-client-core'
-  testCompile deps.'kryo'
+  testImplementation(deps.'hive'.'hive-metastore') {
+    exclude group: 'org.apache.calcite', module: 'calcite-core'
+    exclude group: 'org.apache.calcite', module: 'calcite-avatica'
+  }
+  testImplementation deps.'hadoop'.'hadoop-mapreduce-client-core'
+  testImplementation deps.'kryo'
+  testImplementation deps.'gson'
+  testImplementation deps.'hadoop'.'hadoop-common'
+  testImplementation deps.'derby'
+  implementation deps.'linkedin-calcite-core'
+  implementation deps.'linkedin-calcite-linq4j'
+
+  testRuntimeOnly deps.'datanucleus-api-jdo'
+  testRuntimeOnly deps.'datanucleus-core'
+  testRuntimeOnly deps.'datanucleus-rdbms'
+}
+
+test {
+  jvmArgs '--add-opens=java.sql/java.sql.Driver=ALL-UNNAMED', '--add-exports=java.sql/java.sql.Driver=ALL-UNNAMED'
 }
